fix: horizontal scroll

--- a/src/components/Header/_header.scss
+++ b/src/components/Header/_header.scss
@@ -423,6 +423,9 @@ $breakpoints: (
         height: 1rem;
       }
     }
+    .#{$prefix}--switcher__item--divider {
+      width: calc(100% - 2rem);
+    }
   }
 
   .#{$prefix}--bmrg-header-team__container {
